# kerr

./: .gitignore  Cargo.toml  IOS_PORT_SUMMARY.md  README.md  build.rs
.github/workflows/: loc.yml  main.yml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/api/: client.ts
frontend/src/components/: ConnectionSelector.vue  FileBrowser.vue  FileEditor.vue  ImageViewer.vue  Login.vue  PortForwarding.vue  Terminal.vue
frontend/src/types/: api.ts  connection.ts
ios/: ARCHITECTURE.md  QUICKSTART.md  README.md  SETUP.md  build-sim.sh  deploy-device.sh  launch-sim.sh  project.yml  setup.sh
ios/KerrApp/: ConnectionManager.swift  ConnectionView.swift  ContentView.swift  FileBrowserView.swift  Info.plist  KerrApp.entitlements  KerrApp.swift  QRScannerView.swift  TerminalView.swift  VpnView.swift
ios/KerrApp.xcodeproj/: project.pbxproj
ios/NetworkExtension/: Info.plist  NetworkExtension.entitlements  PacketTunnelProvider.swift
kerr-ios/: Cargo.toml  build-ios.sh  build.rs
kerr-ios/src/: endpoint.rs  file_browser.rs  kerr_ios.udl  lib.rs  session.rs  shell.rs  types.rs  vpn.rs
patches/ed25519-dalek/: Cargo.toml
patches/ed25519-dalek/src/: signing.rs
scripts/: install-service.sh  uninstall-service.sh
src/: auth.rs  browser.rs  client.rs  config.rs  connections_list.rs  debug_log.rs  lib.rs  lock.rs  logging.rs  main.rs  server.rs  traffic_ui.rs  transfer.rs  update.rs  web_ui.html  web_ui.rs
src/custom_explorer/: file_explorer.rs  filesystem.rs  mod.rs  widget.rs
