[package]
name = "kerr"
version = "0.1.0"
edition = "2024"

[dependencies]
iroh = "0.97.0"
n0-snafu = "0.2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
portable-pty = "0.9"
crossterm = { version = "0.29", features = ["event-stream"] }
clap = { version = "4.6", features = ["derive"] }
base64 = "0.22"
arboard = "3.6"
futures = "0.3"
indicatif = "0.18"
walkdir = "2.5"
ratatui = "0.30"
ratatui-explorer = "0.3"
tui-textarea = { version = "0.10", package = "tui-textarea-2" }
chrono = "0.4"
ratatui-image = "10.0"
image = "0.25"
async-trait = "0.1"
flate2 = "1.1"
blake3 = "1.8"
tui-menu = "0.3"
tokio-util = "0.7"
url = "2.5"
rand = "0.10"
reqwest = { version = "0.13", features = ["json"] }
directories = "6.0"
hostname = "0.4"
tui-widget-list = "0.15"
lazy_static = "1.5"
axum = { version = "0.8", features = ["ws", "multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace", "cors"] }
rust-embed = "8.11"
mime_guess = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi", "json"] }
tracing-appender = "0.2"
simple-dns = "0.11"
rkyv = "0.8"

[build-dependencies]
which = "8.0"
